sửa đổi đường dẫn tới Home

--- a/lienhe.html
+++ b/lienhe.html
@@ -6,7 +6,7 @@
     <title>Phương thức liên hệ</title>
   </head>
   <body>
-    <a href="/">| Home | </a>
+    <a href="./index.html">| Home | </a>
     <a href="./gioithieu.html">Giới thiệu | </a>
     <a href="./lienhe.html">Phương thức liên hệ | </a>
     <a href="./doisong.html">Học tập và đời sống | </a>
